--- a/Agreed/0x01.md
+++ b/Agreed/0x01.md
@@ -1,7 +1,3 @@
-Отлично, начинаем согласование следующего пакета.
-
----
-
 ## 🧱 Блок: **\[1.1 In-Memory исполнение]**
 
 * **Внутренний идентификатор:** `in_memory_execution`
@@ -42,10 +38,6 @@
 ---
 
 ✅ Блок \[1.1] (`in_memory_execution`) — полностью согласован.
-
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.2 Tiered Storage (NVMe/SSD)]** (`tiered_storage`).
-
-Продолжаем.
 
 ---
 
@@ -89,10 +81,6 @@
 
 ✅ Блок \[1.2] (`tiered_storage`) — полностью согласован.
 
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.3 Row Store]** (`row_store`).
-
-Продолжаем.
-
 ---
 
 ## 🧱 Блок: **\[1.3 Row Store]**
@@ -134,10 +122,6 @@
 ---
 
 ✅ Блок \[1.3] (`row_store`) — полностью согласован.
-
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.4 Column Store]** (`column_store`).
-
-Продолжаем.
 
 ---
 
@@ -181,10 +165,6 @@
 
 ✅ Блок \[1.4] (`column_store`) — полностью согласован.
 
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.5 JSON Store]** (`json_store`).
-
-Продолжаем.
-
 ---
 
 ## 🧱 Блок: **\[1.5 JSON Store]**
@@ -225,10 +205,6 @@
 ---
 
 ✅ Блок \[1.5] (`json_store`) — полностью согласован.
-
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.6 NUMA-aware allocation]** (`numa_allocator`).
-
-Продолжаем.
 
 ---
 
@@ -272,10 +248,6 @@
 
 ✅ Блок \[1.6] (`numa_allocator`) — полностью согласован.
 
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.7 CPU Affinity и Cache Coloring]** (`cpu_affinity`).
-
-Продолжаем.
-
 ---
 
 ## 🧱 Блок: **\[1.7 CPU Affinity и Cache Coloring]**
@@ -314,10 +286,6 @@
 ---
 
 ✅ Блок \[1.7] (`cpu_affinity`) — полностью согласован.
-
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.8 Prefetch Engine]** (`prefetch_engine`).
-
-Продолжаем.
 
 ---
 
@@ -358,10 +326,6 @@
 ---
 
 ✅ Блок \[1.8] (`prefetch_engine`) — полностью согласован.
-
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.9 Шардирование]** (`sharding`).
-
-Продолжаем.
 
 ---
 
@@ -405,10 +369,6 @@
 
 ✅ Блок \[1.9] (`sharding`) — полностью согласован.
 
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.10 Партиционирование]** (`partitioning`).
-
-Продолжаем.
-
 ---
 
 ## 🧱 Блок: **\[1.10 Партиционирование]**
@@ -450,10 +410,6 @@
 
 ✅ Блок \[1.10] (`partitioning`) — полностью согласован.
 
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.11 Авто-ребалансировка]** (`auto_rebalancing`).
-
-Продолжаем.
-
 ---
 
 ## 🧱 Блок: **\[1.11 Авто-ребалансировка]**
@@ -493,10 +449,6 @@
 ---
 
 ✅ Блок \[1.11] (`auto_rebalancing`) — полностью согласован.
-
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.12 Распределённый планировщик]** (`distributed_planner`).
-
-Продолжаем.
 
 ---
 
@@ -539,10 +491,6 @@
 
 ✅ Блок \[1.12] (`distributed_planner`) — полностью согласован.
 
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.13 TTL, Eviction, Auto-tiering]** (`ttl_eviction`).
-
-Продолжаем.
-
 ---
 
 ## 🧱 Блок: **\[1.13 TTL, Eviction, Auto-tiering]**
@@ -584,10 +532,6 @@
 ---
 
 ✅ Блок \[1.13] (`ttl_eviction`) — полностью согласован.
-
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.14 Авто-ребалансировка и распределение]** (`rebalance_distribution`).
-
-Продолжаем.
 
 ---
 
@@ -633,10 +577,6 @@
 
 ✅ Блок \[1.14] (`rebalance_distribution`) — полностью согласован.
 
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.15 Поддержка системной версии AS OF]** (`system_versioning`).
-
-Продолжаем.
-
 ---
 
 ## 🧱 Блок: **\[1.15 Поддержка системной версии AS OF]**
@@ -679,10 +619,6 @@
 ---
 
 ✅ Блок \[1.15] (`system_versioning`) — полностью согласован.
-
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.16 Поддержка большого объема памяти]** (`large_memory_support`).
-
-Продолжаем.
 
 ---
 
@@ -728,10 +664,6 @@
 
 ✅ Блок \[1.16] (`large_memory_support`) — полностью согласован.
 
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.17 Ограничения по CPU/IOPS/Memory, multi-tenant]** (`memory_limits`).
-
-Продолжаем.
-
 ---
 
 ## 🧱 Блок: **\[1.17 Ограничения по CPU / IOPS / Memory, multi-tenant]**
@@ -775,10 +707,6 @@
 ---
 
 ✅ Блок \[1.17] (`memory_limits`) — полностью согласован.
-
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.18 Поддержка PAX / Apache Arrow layout]** (`pax_arrow_layout`).
-
-Продолжаем.
 
 ---
 
@@ -824,10 +752,6 @@
 
 ✅ Блок \[1.18] (`pax_arrow_layout`) — полностью согласован.
 
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.19 Frame-of-Reference и векторное сжатие]** (`for_vector_compression`).
-
-Продолжаем.
-
 ---
 
 ## 🧱 Блок: **\[1.19 Frame-of-Reference и векторное сжатие]**
@@ -871,10 +795,6 @@
 ---
 
 ✅ Блок \[1.19] (`for_vector_compression`) — полностью согласован.
-
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.20 Page Cache / Buffer Pool]** (`page_cache`).
-
-Продолжаем.
 
 ---
 
@@ -921,10 +841,6 @@
 
 ✅ Блок \[1.20] (`page_cache`) — полностью согласован.
 
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.21 WAL и лог-менеджмент]** (`wal_engine`).
-
-Продолжаем.
-
 ---
 
 ## 🧱 Блок: **\[1.21 WAL и лог-менеджмент]**
@@ -969,10 +885,6 @@
 
 ✅ Блок \[1.21] (`wal_engine`) — полностью согласован.
 
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.22 Snapshot и Instant Recovery]** (`snapshot_engine`).
-
-Продолжаем.
-
 ---
 
 ## 🧱 Блок: **\[1.22 Snapshot и Instant Recovery]**
@@ -1016,10 +928,6 @@
 ---
 
 ✅ Блок \[1.22] (`snapshot_engine`) — полностью согласован.
-
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.23 Поддержка горячих / холодных данных, auto-tiering, TTL, eviction]** (`tiering_ttl_eviction`).
-
-Продолжаем.
 
 ---
 
@@ -1066,10 +974,6 @@
 
 ✅ Блок \[1.23] (`tiering_ttl_eviction`) — полностью согласован.
 
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.24 NUMA-aware allocation, CPU Affinity, Cache Coloring]** (`numa_cpu_allocation`).
-
-Продолжаем.
-
 ---
 
 ## 🧱 Блок: **\[1.24 NUMA-aware allocation, CPU Affinity, Cache Coloring]**
@@ -1113,10 +1017,6 @@
 ---
 
 ✅ Блок \[1.24] (`numa_cpu_allocation`) — полностью согласован.
-
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.25 Хранилище NVMe / SSD fallback (tier-2)]** (`nvme_storage_layer`).
-
-Продолжаем.
 
 ---
 
@@ -1163,10 +1063,6 @@
 
 ✅ Блок \[1.25] (`nvme_storage_layer`) — полностью согласован.
 
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.26 Memory Retention, Downsampling, Compression для Time Series]** (`ts_retention_engine`).
-
-Продолжаем.
-
 ---
 
 ## 🧱 Блок: **\[1.26 Memory Retention, Downsampling, Compression для Time Series]**
@@ -1210,10 +1106,6 @@
 ---
 
 ✅ Блок \[1.26] (`ts_retention_engine`) — полностью согласован.
-
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.27 Поддержка PAX / Apache Arrow layout]** (`pax_arrow_layout`).
-
-Продолжаем.
 
 ---
 
@@ -1260,10 +1152,6 @@
 
 ✅ Блок \[1.27] (`pax_arrow_layout`) — полностью согласован.
 
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.28 Сжатие: frame-of-reference, vectorized decompression]** (`for_vector_compression`).
-
-Продолжаем.
-
 ---
 
 ## 🧱 Блок: **\[1.28 Сжатие: frame-of-reference, vectorized decompression]**
@@ -1308,10 +1196,6 @@
 ---
 
 ✅ Блок \[1.28] (`for_vector_compression`) — полностью согласован.
-
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.29 Adaptive Indexing / Partial / Invisible]** (`adaptive_indexing`).
-
-Продолжаем.
 
 ---
 
@@ -1358,10 +1242,6 @@
 
 ✅ Блок \[1.29] (`adaptive_indexing`) — полностью согласован.
 
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.30 BitMap и Inverted индексы для аналитики]** (`bitmap_inverted_indexes`).
-
-Продолжаем.
-
 ---
 
 ## 🧱 Блок: **\[1.30 BitMap и Inverted индексы для аналитики]**
@@ -1406,10 +1286,6 @@
 ---
 
 ✅ Блок \[1.30] (`bitmap_inverted_indexes`) — полностью согласован.
-
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.31 Индексы: B+ tree / Hash / комбинированные]** (`btree_hash_indexes`).
-
-Продолжаем.
 
 ---
 
@@ -1457,10 +1333,6 @@
 
 ✅ Блок \[1.31] (`btree_hash_indexes`) — полностью согласован.
 
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.32 NUMA-aware Allocation, Cache Coloring, CPU Affinity]** (`numa_cpu_aware`).
-
-Продолжаем.
-
 ---
 
 ## 🧱 Блок: **\[1.32 NUMA-aware Allocation, Cache Coloring, CPU Affinity]**
@@ -1504,10 +1376,6 @@
 ---
 
 ✅ Блок \[1.32] (`numa_cpu_aware`) — полностью согласован.
-
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.33 Ограничения на CPU / IOPS / Memory per session (Multi-Tenant)]** (`resource_limits`).
-
-Продолжаем.
 
 ---
 
@@ -1553,10 +1421,6 @@
 ---
 
 ✅ Блок \[1.33] (`resource_limits`) — полностью согласован.
-
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.34 Горячие и холодные данные: авто-tiering]** (`hot_cold_tiering`).
-
-Продолжаем.
 
 ---
 
@@ -1604,10 +1468,6 @@
 
 ✅ Блок \[1.34] (`hot_cold_tiering`) — полностью согласован.
 
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.35 Авто ребалансировка и распределение (Sharding Rebalancer)]** (`auto_rebalancer`).
-
-Продолжаем.
-
 ---
 
 ## 🧱 Блок: **\[1.35 Авто ребалансировка и распределение (Sharding Rebalancer)]**
@@ -1653,10 +1513,6 @@
 ---
 
 ✅ Блок \[1.35] (`auto_rebalancer`) — полностью согласован.
-
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.36 TTL, Eviction, Retention Policy]** (`ttl_eviction`).
-
-Продолжаем.
 
 ---
 
@@ -1704,10 +1560,6 @@
 
 ✅ Блок \[1.36] (`ttl_eviction`) — полностью согласован.
 
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.37 Поддержка системной версии: SYSTEM VERSIONED, AS OF]** (`system_versioning`).
-
-Продолжаем.
-
 ---
 
 ## 🧱 Блок: **\[1.37 Поддержка системной версии: SYSTEM VERSIONED, AS OF]**
@@ -1752,11 +1604,7 @@
 
 ---
 
-✅ Блок \[1.37] (`system_versioning`) — полностью согласован.
-
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.38 Поддержка форматов данных: JSON, timestamps, UTF-8]** (`data_formats`).
-
-Продолжаем.
+✅ Блок \[1.37] (`system_versioning`) — полностью согласован
 
 ---
 
@@ -1807,10 +1655,6 @@
 
 ✅ Блок \[1.38] (`data_formats`) — полностью согласован.
 
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.39 Профилирование, Flamegraph, Timeline Viewer]** (`profile_engine`).
-
-Продолжаем.
-
 ---
 
 ## 🧱 Блок: **\[1.39 Профилирование, Flamegraph, Timeline Viewer]**
@@ -1860,10 +1704,6 @@
 ---
 
 ✅ Блок \[1.39] (`profile_engine`) — полностью согласован.
-
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.40 Ограничения по CPU, памяти, IOPS per session]** (`resource_limits`).
-
-Продолжаем.
 
 ---
 
@@ -1916,10 +1756,6 @@
 
 ✅ Блок \[1.40] (`resource_limits`) — полностью согласован.
 
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.41 Поддержка PAX / Apache Arrow Layout]** (`layout_pax_arrow`).
-
-Продолжаем.
-
 ---
 
 ## 🧱 Блок: **\[1.41 Поддержка PAX / Apache Arrow Layout]**
@@ -1969,10 +1805,6 @@
 ---
 
 ✅ Блок \[1.41] (`layout_pax_arrow`) — полностью согласован.
-
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.42 Поддержка frame-of-reference + vectorized compression]** (`compression_vectorized`).
-
-Продолжаем.
 
 ---
 
@@ -2025,10 +1857,6 @@
 
 ✅ Блок \[1.42] (`compression_vectorized`) — полностью согласован.
 
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.43 Горячие и холодные данные, auto-tiering]** (`hot_cold_tiering`).
-
-Продолжаем.
-
 ---
 
 ## 🧱 Блок: **\[1.43 Горячие и холодные данные, auto-tiering]**
@@ -2079,10 +1907,6 @@
 ---
 
 ✅ Блок \[1.43] (`hot_cold_tiering`) — полностью согласован.
-
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.44 Автоматическая ребалансировка и шардирование]** (`auto_rebalance_sharding`).
-
-Продолжаем.
 
 ---
 
@@ -2135,10 +1959,6 @@
 
 ✅ Блок \[1.44] (`auto_rebalance_sharding`) — полностью согласован.
 
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.45 Системная версия таблиц, запросы AS OF]** (`system_versioning`).
-
-Продолжаем.
-
 ---
 
 ## 🧱 Блок: **\[1.45 Системная версия таблиц, запросы AS OF]**
@@ -2189,10 +2009,6 @@
 ---
 
 ✅ Блок \[1.45] (`system_versioning`) — полностью согласован.
-
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.46 Ограничения по CPU, памяти, IOPS per session (multi-tenant)]** (`resource_isolation_tenant`).
-
-Продолжаем.
 
 ---
 
@@ -2245,10 +2061,6 @@
 
 ✅ Блок \[1.46] (`resource_isolation_tenant`) — полностью согласован.
 
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.47 Поддержка форматов PAX / Apache Arrow]** (`layout_format_support`).
-
-Продолжаем.
-
 ---
 
 ## 🧱 Блок: **\[1.47 Поддержка форматов PAX / Apache Arrow]**
@@ -2300,10 +2112,6 @@
 
 ✅ Блок \[1.47] (`layout_format_support`) — полностью согласован.
 
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[1.48 Frame-of-Reference и векторное сжатие (внутреннее расширение)]** (`for_encoding_internal`).
-
-Продолжаем.
-
 ---
 
 ## 🧱 Блок: **\[1.48 Frame-of-Reference и векторное сжатие (внутреннее расширение)]**
@@ -2354,5 +2162,3 @@
 ---
 
 ✅ Блок \[1.48] (`for_encoding_internal`) — полностью согласован.
-
-Напишите **«да»**, чтобы перейти к следующему блоку: **\[2.1 MVCC: Compressed Chains + Snapshot Isolation]** (`mvcc_snapshot`).
