--- a/block_functions/0x00.md
+++ b/block_functions/0x00.md
@@ -1,14 +1,38 @@
 Полные спецификации 374 блоков в формате block_functions (по одному на каждый архитектурный блок)
 
 Каждый блок содержит:
-Назначение
-Список всех функций
-Прототипы
-Структуры данных
-Метрики
-Безопасность
-Зависимости
-Примеры тестов
+* Назначение
+* Список всех функций
+* Прототипы
+* Структуры данных
+* Метрики
+* Безопасность
+* Зависимости
+* Примеры тестов
+
+---
+
+{
+  "id": "20.4",
+  "internal_id": "core_storage_row_column_json_indexes",
+  "title": "Ядро хранилища: row-store, column-store, JSON-store и индексы",
+  "package": "20. Внутренняя структура и ядро",
+  "description": "...",
+  "functions": [
+    {
+      "name": "storage_row_insert",
+      "prototype": "bool storage_row_insert(table_t *table, const row_t *row);",
+      "description": "Вставляет строку в row-store.",
+      "returns": "true"
+    },
+    ...
+  ],
+  "structures": [...],
+  "metrics": [...],
+  "security": [...],
+  "dependencies": [...],
+  "tests": [...]
+}
 
 ---
 
